--- a/techmart/templates/store/base.html
+++ b/techmart/templates/store/base.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>{{ site_logo.alt_text|default:"TechMart" }}</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="icon" type="image/jpeg" href="{{ site_logo.logo.url }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-yHma4GfZ4I+fYqH5+J0uD7kDd3Ip8R6HzUyxj57tR3JXYeNnrx+l3k1lymj1fNN6V2i3DBO1i8eJrjB45nX1hA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         :root {
